// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "currentPage": 1,
    "dataLoaded": true,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "goToPage": [Function],
    "limit": 20,
    "offset": 40,
    "pageArraySize": 3,
    "total": 50,
  },
  "html": "
<div class=\\"pagination\\">
  <div class=\\"page-buttons\\">
    <!--0-->
    <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
    <!--1-->
    <!--0-->
    <button data-test-pagination-page=\\"2\\">2</button>
    <!--1-->
    <!--0-->
    <button data-test-pagination-page=\\"3\\">3</button>
    <!--1-->
  </div>
  <!--0-->
  <!--0-->
  <!--1-->
  <div class=\\"page-buttons\\">
    <!--0-->
    <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
    <!--1-->
    <!--0-->
    <button data-test-pagination-page=\\"2\\">2</button>
    <!--1-->
    <!--0-->
    <button data-test-pagination-page=\\"3\\">3</button>
    <!--1-->
  </div>
  <!--2-->
</div>
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "currentPage": 1,
    "dataLoaded": true,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "goToPage": [Function],
    "limit": 50,
    "pageArraySize": 3,
    "total": 0,
  },
  "html": "
<div class=\\"pagination\\">
  <div class=\\"page-buttons\\">
    <!--0-->
    <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
    <!--1-->
  </div>
  <!--0-->
  <!--0-->
  <!--1-->
  <div class=\\"page-buttons\\">
    <!--0-->
    <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
    <!--1-->
  </div>
  <!--2-->
</div>
",
}
`;
